added serviceWorker, manifest, favicon and netlify support

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Rockstar Games",
+  "name": "Install Official Rockstar Games App",
   "icons": [
     {
       "src": "favicon.ico",
